modified:   source/Notebook/1_Data_Collecting.ipynb

--- a/source/Notebook/1_Data_Collecting.ipynb
+++ b/source/Notebook/1_Data_Collecting.ipynb
@@ -194,8 +194,10 @@
    "outputs": [],
    "source": [
     "locales = [\n",
-    "    \"en_US\", \"fr_FR\", \"de_DE\", \"zh_CN\",\n",
-    "    \"zh_TW\", \"ja_JP\", \"ko_KR\", \"vi_VN\"\n",
+    "    \"en_US\", \"en_GB\", \"sv_SE\", \"fr_FR\", \"de_DE\", \n",
+    "    \"es_ES\", \"es_MX\", \"it_IT\", \"zh_CN\", \"zh_TW\",\n",
+    "    \"ja_JP\", \"ko_KR\", \"pt_PT\", \"pt_BR\", \"ru_RU\",\n",
+    "    \"ar_SA\", \"nl_NL\", \"no_NO\", \"da_DK\"\n",
     "]"
    ]
   },
@@ -231,7 +233,7 @@
     "            start_time = time.time()\n",
     "            \n",
     "        response = get(url, headers=headers, params=params)\n",
-    "        if response.status_code == 429:\n",
+    "        if response.status_code == 429: # Ta xử lý cẩn thận với trường hợp rate-limit\n",
     "            trying = 5\n",
     "            while response.status_code == 429 and trying > 0:\n",
     "                print(\"Rate limit exceeded. Change API KEY\")\n",
@@ -652,6 +654,9 @@
     "    # Gộp hai file dựa trên `Track ID`\n",
     "    merged_data = pd.merge(input_data, feature_data, on='Track ID', how='inner')\n",
     "\n",
+    "    # Loại bỏ các bản ghi trùng lặp dựa trên 'Track ID'\n",
+    "    merged_data = merged_data.drop_duplicates(subset=['Track ID'])\n",
+    "\n",
     "    # Ghi file kết quả\n",
     "    merged_data.to_csv(merged_csv, index=False)\n",
     "    print(f\"Merged data has been saved to {merged_csv}\")"
@@ -671,7 +676,7 @@
    "metadata": {},
    "source": [
     "# Get other features\n",
-    "Ta cần thêm một số thuộc tính sau:\n",
+    "từ file csv có được ở các bước trên. Ta cần thêm một số thuộc tính sau:\n",
     "- popularity\n",
     "- release day\n",
     "\n",
