--- a/source/Notebook/1_Data_Collecting.ipynb
+++ b/source/Notebook/1_Data_Collecting.ipynb
@@ -809,8 +809,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "spotifyRec",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
