--- a/source/Notebook/4_DataForEDA.ipynb
+++ b/source/Notebook/4_DataForEDA.ipynb
@@ -23,79 +23,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/processed_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>album_name</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>release_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>seasons</td>\n",
+       "      <td>wave to earth</td>\n",
+       "      <td>summer flows 0.02</td>\n",
+       "      <td>0.372</td>\n",
+       "      <td>0.273</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-10.629</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0268</td>\n",
+       "      <td>0.782</td>\n",
+       "      <td>0.046300</td>\n",
+       "      <td>0.2190</td>\n",
+       "      <td>0.165</td>\n",
+       "      <td>60.038</td>\n",
+       "      <td>255998</td>\n",
+       "      <td>4</td>\n",
+       "      <td>79</td>\n",
+       "      <td>2020-08-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Nahuhulog</td>\n",
+       "      <td>Jed Baruelo</td>\n",
+       "      <td>Nahuhulog</td>\n",
+       "      <td>0.612</td>\n",
+       "      <td>0.389</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-12.725</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0578</td>\n",
+       "      <td>0.837</td>\n",
+       "      <td>0.004610</td>\n",
+       "      <td>0.3060</td>\n",
+       "      <td>0.348</td>\n",
+       "      <td>125.091</td>\n",
+       "      <td>227262</td>\n",
+       "      <td>4</td>\n",
+       "      <td>64</td>\n",
+       "      <td>2022-05-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ligaya</td>\n",
+       "      <td>mrld</td>\n",
+       "      <td>Ligaya</td>\n",
+       "      <td>0.458</td>\n",
+       "      <td>0.533</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-5.249</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0381</td>\n",
+       "      <td>0.447</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.1140</td>\n",
+       "      <td>0.343</td>\n",
+       "      <td>149.832</td>\n",
+       "      <td>248800</td>\n",
+       "      <td>4</td>\n",
+       "      <td>65</td>\n",
+       "      <td>2021-10-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Oceans &amp; Engines</td>\n",
+       "      <td>NIKI</td>\n",
+       "      <td>Nicole</td>\n",
+       "      <td>0.371</td>\n",
+       "      <td>0.314</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-8.920</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0347</td>\n",
+       "      <td>0.622</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>0.0893</td>\n",
+       "      <td>0.066</td>\n",
+       "      <td>95.109</td>\n",
+       "      <td>336000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>72</td>\n",
+       "      <td>2022-08-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Let You Break My Heart Again</td>\n",
+       "      <td>Laufey</td>\n",
+       "      <td>Let You Break My Heart Again</td>\n",
+       "      <td>0.299</td>\n",
+       "      <td>0.142</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-15.134</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0369</td>\n",
+       "      <td>0.965</td>\n",
+       "      <td>0.113000</td>\n",
+       "      <td>0.1110</td>\n",
+       "      <td>0.123</td>\n",
+       "      <td>76.748</td>\n",
+       "      <td>269066</td>\n",
+       "      <td>4</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2021-08-13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     track_name    artist_name                    album_name  \\\n",
+       "0                       seasons  wave to earth             summer flows 0.02   \n",
+       "1                     Nahuhulog    Jed Baruelo                     Nahuhulog   \n",
+       "2                        Ligaya           mrld                        Ligaya   \n",
+       "3              Oceans & Engines           NIKI                        Nicole   \n",
+       "4  Let You Break My Heart Again         Laufey  Let You Break My Heart Again   \n",
+       "\n",
+       "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
+       "0         0.372   0.273    7   -10.629     1       0.0268         0.782   \n",
+       "1         0.612   0.389    4   -12.725     0       0.0578         0.837   \n",
+       "2         0.458   0.533    0    -5.249     1       0.0381         0.447   \n",
+       "3         0.371   0.314    1    -8.920     1       0.0347         0.622   \n",
+       "4         0.299   0.142    2   -15.134     1       0.0369         0.965   \n",
+       "\n",
+       "   instrumentalness  liveness  valence    tempo  duration_ms  time_signature  \\\n",
+       "0          0.046300    0.2190    0.165   60.038       255998               4   \n",
+       "1          0.004610    0.3060    0.348  125.091       227262               4   \n",
+       "2          0.000000    0.1140    0.343  149.832       248800               4   \n",
+       "3          0.000012    0.0893    0.066   95.109       336000               4   \n",
+       "4          0.113000    0.1110    0.123   76.748       269066               4   \n",
+       "\n",
+       "   popularity release_date  \n",
+       "0          79   2020-08-04  \n",
+       "1          64   2022-05-13  \n",
+       "2          65   2021-10-06  \n",
+       "3          72   2022-08-11  \n",
+       "4          76   2021-08-13  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "spotifyRec",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
